@@ -58,38 +58,7 @@ public interface UserMessageHandlerService {
      */
     SOAPMessage handleNewSourceUserMessage(LegConfiguration legConfiguration, String pmodeKey, SOAPMessage request, UserMessage userMessage, List<PartInfo> partInfoList, boolean testMessage) throws EbMS3Exception, TransformerException, IOException, JAXBException, SOAPException;
 
-    /**
-     * Checks if this message is a test message.
-     *
-     * @param message the message
-     * @return result of test service and action handle
-     */
-
-//    Boolean checkTestMessage(UserMessage message);
-
-    /**
-     * Checks if this message is a test message.
-     *
-     * @param service the service of this user message
-     * @param action the action of this user message
-     *
-     * @return result of test service and action handle
-     */
-//    Boolean checkTestMessage(String service, String action);
-
-    /**
-     * Checks if this message is a test message.
-     *
-     * @param legConfiguration the legConfiguration that matched the message
-     * @return result of test service and action handle
-     */
-
-//    Boolean checkTestMessage(final LegConfiguration legConfiguration);
-
     List<PartInfo> handlePayloads(SOAPMessage request, Ebms3Messaging ebms3Messaging, Ebms3MessageFragmentType ebms3MessageFragmentType)
             throws EbMS3Exception, SOAPException, TransformerException;
-
-//    ErrorResult createErrorResult(EbMS3Exception ebm3Exception);
-
 
 }
