@@ -1,4 +1,5 @@
 Domibus 5.1
+- Split DatabaseMessageHandler bean in 3 beans (MessageSubmitter, MessageRetriever, MessagePuller), each implementing just one interface
 - New Keystore page in the Domibus Admin Console
 Domibus 5.0
 - Send alert when partitions are not properly created in advance
